--- a/manifest.json
+++ b/manifest.json
@@ -12,11 +12,5 @@
   "action": {
     "default_popup": "popup.html"
   },
-  "description": "Keeps VPN alive by pinging the server and reconnecting if it disconnects.",
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
-  }
+  "description": "Keeps VPN alive by pinging the server and reconnecting if it disconnects."
 }
-
